if (MDLX)
	# for proper "config.h" detection we use relative paths of modules as well
	include_directories("${PROJECT_BINARY_DIR}/src/mdlx")

	set(wc3lib_MDLX_H
		ambientcolor.hpp
		ambientcolors.hpp
		ambientintensities.hpp
		ambientintensity.hpp
		attachment.hpp
		attachments.hpp
		attachmentvisibilities.hpp
		attachmentvisibility.hpp
		bone.hpp
		bones.hpp
		bounds.hpp
		camera.hpp
		camerarotationlength.hpp
		camerarotationlengths.hpp
		cameras.hpp
		cameratargettranslation.hpp
		cameratargettranslations.hpp
		cameratranslation.hpp
		cameratranslations.hpp
		collisionshape.hpp
		collisionshapes.hpp
		emissionrate.hpp
		emissionrates.hpp
		event.hpp
		events.hpp
		eventtrack.hpp
		eventtracks.hpp
		ganimation.hpp
		geoset.hpp
		geosetanimation.hpp
		geosetanimation.hpp
		geosetanimationalpha.hpp
		geosetanimationalpha.hpp
		geosetanimationalphas.hpp
		geosetanimationcolor.hpp
		geosetanimationcolors.hpp
		geosetanimations.hpp
		geosets.hpp
		globalsequence.hpp
		globalsequences.hpp
		groupmdxblock.hpp
		groupmdxblockmember.hpp
		groupvertex.hpp
		groupvertices.hpp
		helper.hpp
		helpers.hpp
		intensities.hpp
		intensity.hpp
		layer.hpp
		layers.hpp
		lengths.hpp
		light.hpp
		lightambientcolor.hpp
		lightambientcolors.hpp
		lightambientvisibilities.hpp
		lightambientvisibility.hpp
		lights.hpp
		material.hpp
		materialalpha.hpp
		materialalphas.hpp
		materials.hpp
		matrices.hpp
		matrix.hpp
		matrixgroupcount.hpp
		matrixgroupcounts.hpp
		mdlgrammar.hpp
		mdlgrammarclient.hpp
		mdlvalueblock.hpp
		mdlx.hpp
		mdlxalpha.hpp
		mdlxanimatedproperties.hpp
		mdlxanimatedproperty.hpp
		mdlxproperty.hpp
		mdlxrotation.hpp
		mdlxrotations.hpp
		mdlxscaling.hpp
		mdlxscalings.hpp
		mdlxtranslation.hpp
		mdlxtranslations.hpp
		mdxblock.hpp
		model.hpp
		node.hpp
		normal.hpp
		normals.hpp
		object.hpp
		particleemitter.hpp
		particleemitter2.hpp
		particleemitter2latitude.hpp
		particleemitter2latitudes.hpp
		particleemitter2s.hpp
		particleemitter2speed.hpp
		particleemitter2speeds.hpp
		particleemitter2visibilities.hpp
		particleemitter2visibility.hpp
		particleemitter2width.hpp
		particleemitter2widths.hpp
		particleemitters.hpp
		particleemittervisibilities.hpp
		particleemittervisibility.hpp
		pivotpoint.hpp
		pivotpoints.hpp
		platform.hpp
		primitivesize.hpp
		primitivesizes.hpp
		primitivetype.hpp
		primitivetypes.hpp
		primitivevertex.hpp
		primitivevertices.hpp
		ribbonemitter.hpp
		ribbonemitterheightabove.hpp
		ribbonemitterheightbelow.hpp
		ribbonemitterheightsabove.hpp
		ribbonemitterheightsbelow.hpp
		ribbonemitters.hpp
		ribbonemittervisibilities.hpp
		ribbonemittervisibility.hpp
		segmentcolor.hpp
		sequence.hpp
		sequences.hpp
		texture.hpp
		textureanimation.hpp
		textureanimationrotation.hpp
		textureanimationrotations.hpp
		textureanimations.hpp
		textureanimationscaling.hpp
		textureanimationscalings.hpp
		textureanimationtranslation.hpp
		textureanimationtranslations.hpp
		textureid.hpp
		textureids.hpp
		texturepatch.hpp
		texturepatches.hpp
		textures.hpp
		texturevertex.hpp
		texturevertices.hpp
		version.hpp
		vertex.hpp
		vertices.hpp
	)
	set(wc3lib_MDLX_SRC
		ambientcolor.cpp
		ambientcolors.cpp
		ambientintensities.cpp
		ambientintensity.cpp
		attachment.cpp
		attachments.cpp
		attachmentvisibilities.cpp
		attachmentvisibility.cpp
		bone.cpp
		bones.cpp
		bounds.cpp
		camera.cpp
		camerarotationlength.cpp
		camerarotationlengths.cpp
		cameras.cpp
		cameratargettranslation.cpp
		cameratargettranslations.cpp
		cameratranslation.cpp
		cameratranslations.cpp
		collisionshape.cpp
		collisionshapes.cpp
		emissionrate.cpp
		emissionrates.cpp
		event.cpp
		events.cpp
		eventtrack.cpp
		eventtracks.cpp
		ganimation.cpp
		geoset.cpp
		geosetanimation.cpp
		geosetanimation.cpp
		geosetanimationalpha.cpp
		geosetanimationalpha.cpp
		geosetanimationalphas.cpp
		geosetanimationcolor.cpp
		geosetanimationcolors.cpp
		geosetanimations.cpp
		geosets.cpp
		globalsequence.cpp
		globalsequences.cpp
		groupmdxblock.cpp
		groupmdxblockmember.cpp
		groupvertex.cpp
		groupvertices.cpp
		helper.cpp
		helpers.cpp
		intensities.cpp
		intensity.cpp
		layer.cpp
		layers.cpp
		lengths.cpp
		light.cpp
		lightambientcolor.cpp
		lightambientcolors.cpp
		lightambientvisibilities.cpp
		lightambientvisibility.cpp
		lights.cpp
		material.cpp
		materialalpha.cpp
		materialalphas.cpp
		materials.cpp
		matrices.cpp
		matrix.cpp
		matrixgroupcount.cpp
		matrixgroupcounts.cpp
		mdlgrammar.cpp
		mdlvalueblock.cpp
		mdlx.cpp
		mdlxalpha.cpp
		mdlxanimatedproperties.cpp
		mdlxanimatedproperty.cpp
		mdlxproperty.cpp
		mdlxrotation.cpp
		mdlxrotations.cpp
		mdlxscaling.cpp
		mdlxscalings.cpp
		mdlxtranslation.cpp
		mdlxtranslations.cpp
		mdxblock.cpp
		model.cpp
		node.cpp
		normal.cpp
		normals.cpp
		object.cpp
		particleemitter.cpp
		particleemitter2.cpp
		particleemitter2latitude.cpp
		particleemitter2latitudes.cpp
		particleemitter2s.cpp
		particleemitter2speed.cpp
		particleemitter2speeds.cpp
		particleemitter2visibilities.cpp
		particleemitter2visibility.cpp
		particleemitter2width.cpp
		particleemitter2widths.cpp
		particleemitters.cpp
		particleemittervisibilities.cpp
		particleemittervisibility.cpp
		pivotpoint.cpp
		pivotpoints.cpp
		primitivesize.cpp
		primitivesizes.cpp
		primitivetype.cpp
		primitivetypes.cpp
		primitivevertex.cpp
		primitivevertices.cpp
		ribbonemitter.cpp
		ribbonemitterheightabove.cpp
		ribbonemitterheightbelow.cpp
		ribbonemitterheightsabove.cpp
		ribbonemitterheightsbelow.cpp
		ribbonemitters.cpp
		ribbonemittervisibilities.cpp
		ribbonemittervisibility.cpp
		segmentcolor.cpp
		sequence.cpp
		sequences.cpp
		texture.cpp
		textureanimation.cpp
		textureanimationrotation.cpp
		textureanimationrotations.cpp
		textureanimations.cpp
		textureanimationscaling.cpp
		textureanimationscalings.cpp
		textureanimationtranslation.cpp
		textureanimationtranslations.cpp
		textureid.cpp
		textureids.cpp
		texturepatch.cpp
		texturepatches.cpp
		textures.cpp
		texturevertex.cpp
		texturevertices.cpp
		version.cpp
		vertex.cpp
		vertices.cpp
	)

	add_library(wc3libmdlx SHARED ${wc3lib_MDLX_SRC})
	target_link_libraries(wc3libmdlx wc3libcore ${GETTEXT_LIBRARIES} ${Boost_LIBRARIES})

	if (DEBUG)
		add_subdirectory(test)
	endif ()

	# install

	install(TARGETS wc3libmdlx DESTINATION lib)
	install(FILES ${wc3lib_MDLX_H} DESTINATION include/wc3lib/mdlx)
endif ()